# LSEG-Flower-Exchange

./: .gitignore  CMakeLists.txt  README.md  example1.csv  main.cpp
.github/workflows/: cmake-multi-platform.yml
Data/: execution_report.csv  order.csv
Include/: ExchangeSystem.h  ExecutionReport.h  Order.h  OrderBook.h  OrderBookSide.h  Utils.h
Src/: ExchangeSystem.cpp  ExecutionReport.cpp  FileHandler.cpp  Order.cpp  OrderBook.cpp  OrderBookSide.cpp  Utils.cpp  main.cpp
Tests/: test_exchangesystem.cpp  test_executionreport.cpp  test_order.cpp  test_orderbook.cpp
data/output/: input_exec_report.csv  order1_exec_report.csv  order2_exec_report.csv  order3_exec_report.csv  order4_exec_report.csv  order5_exec_report.csv  order6_exec_report.csv  order7_exec_report.csv
data/validate/: example1_output.csv  example2_output.csv  example3_output.csv  example4_output.csv  example5_output.csv  example6_output.csv  example7_output.csv
include/: ExchangeSystem.h  ExecutionReport.h  FileHandler.h  Order.h  OrderBook.h  OrderBookSide.h  Utils.h
src/: ExchangeSystem.cpp  ExecutionReport.cpp  FileHandler.cpp  Order.cpp  OrderBook.cpp  Utils.cpp  main.cpp
temp_data/: execution_report.csv  order.csv  order2.csv
temp_include/: ExchangeSystem.h  ExecutionReport.h  FileHandler.h  OrderBook.h  Utils.h
temp_src/: ExchangeSystem.cpp  ExecutionReport.cpp  FileHandler.cpp  Order.cpp  OrderBook.cpp  OrderBookSide.cpp  Utils.cpp  main.cpp
temp_tests/: test_exchangesystem.cpp  test_executionreport.cpp  test_filehandler.cpp  test_order.cpp  test_orderbook.cpp  test_utils.cpp
tests/: test_exchangesystem.cpp  test_executionreport.cpp  test_filehandler.cpp  test_order.cpp  test_orderbook.cpp  test_utils.cpp
tests/integration_test/: integration_test.py
